--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,62 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.userstab{
+  color: blueviolet;
+  background-color: rgb(228, 221, 235);
+  box-shadow: rgba(137, 43, 226, 0.459) 0 10px 40px 0;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.userstab th,td{
+  border: blueviolet 1px solid;
+  border-collapse: collapse;
+  padding: 10px;
 }
-
-* {
-  box-sizing: border-box;
+Header{
+  background-color: rgb(228, 221, 235);
+}
+.cardd{
+  border: blueviolet 1px solid;
+  background-color: rgb(228, 221, 235);
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  color: blueviolet;
+  font-weight: bold;
+  box-shadow: rgba(137, 43, 226, 0.459) 0 10px 40px 0;
+}
+.carddd{
+  border: blueviolet 1px solid;
+  background-color: rgb(228, 221, 235);
+  border-radius: 10px;
+  padding: 15px;
+  text-align: center;
+  color: blueviolet;
+  font-weight: bold;
+  box-shadow: rgba(137, 43, 226, 0.459) 0 10px 40px 0;
+  height: 140px;
+  margin: 20px 5px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: capitalize;
+}
+.cardddd{
+  border: blueviolet 1px solid;
+  background-color: rgb(228, 221, 235);
+  border-radius: 10px;
+  padding: 15px;
+  text-align: center;
+  color: blueviolet;
+  font-weight: bold;
+  box-shadow: rgba(137, 43, 226, 0.459) 0 10px 40px 0;
+  height: 200px;
+  margin: 20px 5px;
+  font-size: 18px;
+  text-transform: capitalize;
+}
+.body{
+  font-size: 12px;
+  text-transform: none;
+}
+a{
+  text-decoration: none !important;
+  color: blueviolet;
 }
